...
            }
          }
        })
  }

  Scaffold(
      modifier = Modifier.testTag("DeckPlayScreen"),
      topBar = {
        ScreenTopBar(
            playMode.value?.toReadableString() ?: stringResource(R.string.no_mode_selected),
            "DeckPlayScreenTopBar",
            { navigationActions.goBack() },
            {
              Icon(
                  imageVector = Icons.Filled.Close,
                  contentDescription = "Exit Play Deck",
                  tint = MaterialTheme.colorScheme.onSurface)
            },
            "DeckPlayIcon")
      }) { innerPadding ->
        Column(
            modifier = Modifier.padding(innerPadding).fillMaxSize().testTag("DeckPlayScreenColumn"),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally) {
              if (deck.value == null || userFlashcardList.value.isEmpty()) {
                LoadingIndicator(stringResource(R.string.loading_deck))
              } else {
                val score = remember { mutableIntStateOf(0) }
...
  val playDeckHistory = remember {
    mutableStateOf(
        PlayDeckHistory(
            currentFlashcardId =
                UserFlashcard.selectRandomFlashcardLinear(userFlashcardList.value).id))
  }
  Box(modifier = Modifier.testTag("ReviewModeColumn").fillMaxSize()) {
    val listOfPagerFlashcards = remember {
      derivedStateOf { playDeckHistory.value.listOfAllFlashcard }
    }
    val pagerState = rememberPagerState { listOfPagerFlashcards.value.size }
    val scrollScope = rememberCoroutineScope()

...
                .align(Alignment.Center)
                .padding(bottom = 150.dp)) { pageIndex ->
          Column(
              modifier =
                  Modifier.fillMaxWidth()
                      .padding(16.dp)
                      .testTag("flashcardColumn")
                      .graphicsLayer {
                        val pageOffset =
                            ((pagerState.currentPage - pageIndex) +
                                    pagerState.currentPageOffsetFraction)
                                .absoluteValue
                        alpha =
...
                    onCorrect = { score.value += 1 },
                    choice = answers[flashcardList.value[pageIndex].id]!!)
              }
        }
    Column(
        modifier =
            Modifier.testTag("TestModeColumn")
                .fillMaxSize()
                .padding(5.dp)
                .align(Alignment.BottomCenter),
        verticalArrangement = Arrangement.Bottom,
        horizontalAlignment = Alignment.CenterHorizontally) {
          AnimatedVisibility(pagerState.currentPage == flashcardList.value.size - 1) {
            ElevatedButton(
                modifier = Modifier.padding(20.dp).testTag("submitButton"),
                onClick = { isFinished.value = true },
                enabled = pagerState.currentPage == flashcardList.value.size - 1) {
                  Text(
                      stringResource(R.string.finish_test),
                      style = MaterialTheme.typography.headlineSmall)
                }
...
    onIncorrect: () -> Unit,
    modifier: Modifier = Modifier,
) {
  Row(modifier = modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceEvenly) {
    Button(
        onClick = { onIncorrect() },
        modifier = Modifier.padding(3.dp).testTag("incorrectButton"),
        enabled = answers[selectedFlashcardId]!!.value == null) {
          Row(
              verticalAlignment = Alignment.CenterVertically,
              horizontalArrangement = Arrangement.SpaceBetween) {
                Icon(
                    imageVector = Icons.Default.Close,
...
                    style = MaterialTheme.typography.bodyLarge,
                    maxLines = 1)
              }
        }
    Button(
        onClick = { onCorrect() },
        modifier = Modifier.padding(3.dp).testTag("correctButton"),
        enabled = answers[selectedFlashcardId]!!.value == null) {
          Row(
              verticalAlignment = Alignment.CenterVertically,
              horizontalArrangement = Arrangement.SpaceBetween) {
                Icon(
                    imageVector = Icons.Default.Check,
...
    flashcardViewModel: FlashcardViewModel,
    answers: Map<String, MutableState<Int?>>
) {
  var animatedScore by remember { mutableFloatStateOf(0f) }
  val targetScore = if (!isFinished.value) 0 else score.intValue * 100 / flashcardList.value.size
  Column(
      modifier = Modifier.testTag("FinishedScreenColumn").fillMaxSize(),
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally) {
        // wait for the user to finish the test before starting animation

        LaunchedEffect(isFinished.value) {
          if (isFinished.value) {
...
                    flashcardViewModel.selectFlashcard(flashcardList.value.first())
                  })
              for (flashcard in flashcardList.value) {
                answers[flashcard.id]!!.value = null
              }
            },
            modifier = Modifier.padding(16.dp).testTag("retryButton")) {
              Row(
                  verticalAlignment = Alignment.CenterVertically,
                  horizontalArrangement = Arrangement.spacedBy(10.dp)) {
                    Icon(
                        imageVector = Icons.Default.Replay,
                        contentDescription = "Close Icon",
...
