...
 * @param fileViewModel The ViewModel for file-related data.
 * @param pictureTaker The utility for taking pictures.
 * @param belongsToUser Indicates whether the flashcard belongs to the current user.
 */
@Composable
fun FlashcardViewItem(
    flashcard: State<Flashcard>,
    deckViewModel: DeckViewModel,
    flashcardViewModel: FlashcardViewModel,
    fileViewModel: FileViewModel,
    pictureTaker: PictureTaker,
    belongsToUser: Boolean = false
) {
...
                    .heightIn(min = 200.dp, max = 400.dp)) {
              if (rotation <= 90f || rotation >= 270f) {
                Text(
                    flashcard.value.front,
                    style = Typography.bodyLarge,
                    fontWeight = FontWeight(450),
                    modifier = Modifier.testTag("flashcardFront"))
                FlashcardImage(flashcard, fileViewModel)
              } else {
                Text(
                    flashcard.value.back,
                    style = Typography.bodyLarge,
                    fontWeight = FontWeight(450),
                    modifier = Modifier.testTag("flashcardBack").graphicsLayer { rotationY = 180f })
              }
            }
      }
}

/**
...
                  MaterialTheme.colorScheme.onSurface
                }
            ElevatedCard(
                modifier =
                    Modifier.fillMaxWidth(0.7f)
                        .padding(horizontal = 10.dp)
                        .testTag("flashcardChoice"),
                onClick = {
                  if (choice.value == null) {
                    choice.value = index
                    if (index == 0) {
                      onCorrect()
                    } else {
...
                            null ->
                                Icon(
                                    imageVector = Icons.Default.CheckBoxOutlineBlank,
                                    contentDescription = null,
                                    tint = color.value,
                                    modifier =
                                        Modifier.padding(5.dp).testTag("flashcardChoiceIcon"))
                            true ->
                                Icon(
                                    imageVector = Icons.Default.Check,
                                    contentDescription = null,
                                    tint = color.value,
                                    modifier = Modifier.padding(5.dp).testTag("flashcardCheckIcon"))
                            false ->
                                Icon(
                                    imageVector = Icons.Default.Close,
                                    contentDescription = null,
                                    tint = color.value,
                                    modifier = Modifier.padding(5.dp).testTag("flashcardWrongIcon"))
                          }
                        }
                        Text(
                            backs[index],
                            style = Typography.bodyMedium,
                            color = color.value,
...
